# deepin-screensaver

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  README.zh_CN.md  common.pri  deepin-screensaver.pro
.reuse/: dep5
.tx/: config  transifex.yaml
customscreensaver/: CMakeLists.txt  customscreensaver.pro
customscreensaver/deepin-custom-screensaver/: CMakeLists.txt  deepin-custom-screensaver.pro  deepin-custom-screensaver_translation.cpp  generate_translations.sh  update_translations.sh
customscreensaver/deepin-custom-screensaver/data/: deepin-custom-screensaver.conf  deepin-custom-screensaver.desktop  deepin-custom-screensaver.json  org.deepin.customscreensaver.json
customscreensaver/deepin-custom-screensaver/src/: commandlinemanager.cpp  commandlinemanager.h  main.cpp  singleinstance.cpp  slideshowconfig.cpp  slideshowconfig.h  slideshowconfigdialog.cpp  slideshowconfigdialog.h  slideshowscreensaver.cpp  slideshowscreensaver.h
customscreensaver/deepin-custom-screensaver/src/config/: selectpathwidget.cpp  selectpathwidget.h  truncatelineedit.cpp
customscreensaver/deepin-custom-screensaver/translations/: deepin-custom-screensaver.ts  deepin-custom-screensaver_ady.ts  deepin-custom-screensaver_af.ts  deepin-custom-screensaver_am_ET.ts  deepin-custom-screensaver_ar.ts  deepin-custom-screensaver_ast.ts  deepin-custom-screensaver_az.ts  deepin-custom-screensaver_bg.ts  deepin-custom-screensaver_bn.ts  deepin-custom-screensaver_bo.ts  deepin-custom-screensaver_bqi.ts  deepin-custom-screensaver_br.ts  deepin-custom-screensaver_ca.ts  deepin-custom-screensaver_cs.ts  deepin-custom-screensaver_da.ts  deepin-custom-screensaver_de.ts  deepin-custom-screensaver_el.ts  deepin-custom-screensaver_en_AU.ts  deepin-custom-screensaver_en_GB.ts  deepin-custom-screensaver_eo.ts  deepin-custom-screensaver_es.ts  deepin-custom-screensaver_es_CU.ts  deepin-custom-screensaver_et.ts  deepin-custom-screensaver_fa.ts  deepin-custom-screensaver_fi.ts  deepin-custom-screensaver_fil.ts  deepin-custom-screensaver_fr.ts  deepin-custom-screensaver_gl_ES.ts  deepin-custom-screensaver_he.ts  deepin-custom-screensaver_hi_IN.ts  deepin-custom-screensaver_hr.ts  deepin-custom-screensaver_hu.ts  deepin-custom-screensaver_hy.ts  deepin-custom-screensaver_id.ts  deepin-custom-screensaver_it.ts  deepin-custom-screensaver_ja.ts  deepin-custom-screensaver_ka.ts  deepin-custom-screensaver_kab.ts  deepin-custom-screensaver_km_KH.ts  deepin-custom-screensaver_kn_IN.ts  (+41 more)
customscreensaver/deepin-video-screensaver/: commandlinemanager.cpp  commandlinemanager.h  deepin-video-screensaver.pro  main.cpp  videoscreensaver.cpp  videoscreensaver.h  xproxywindow.cpp  xproxywindow.h
customscreensaver/deepin-video-screensaver/data/video/: .readme
customscreensaver/deepin-web-screensaver/: deepin-web-screensaver.pro
customscreensaver/deepin-web-screensaver/data/: deepin-web-screensaver.desktop  org.deepin.webscreensaver.json
customscreensaver/deepin-web-screensaver/src/: commandlinemanager.cpp  main.cpp  singleinstance.cpp  slideshowconfig.cpp  slideshowconfig.h  slideshowconfigdialog.cpp  slideshowconfigdialog.h  slideshowscreensaver.cpp  slideshowscreensaver.h
customscreensaver/deepin-web-screensaver/src/config/: selectpathwidget.cpp  selectpathwidget.h
customscreensaver/deepin-web-screensaver/translations/: deepin-web-screensaver.ts  deepin-web-screensaver_zh_CN.ts  deepin-web-screensaver_zh_HK.ts
customscreensaver/saverpic/: CMakeLists.txt  main.cpp  saverpic.qml
debian/: changelog  control  deepin-screensaver-xscreensaver-data.install  deepin-screensaver-xscreensaver-data.postinst  deepin-screensaver-xscreensaver-data.postinst.in  deepin-screensaver.install  rules
src/: CMakeLists.txt  customconfig.cpp  customconfig.h  dbuscustomconfig.cpp  dbuscustomconfig.h  dbusscreensaver.cpp  dbusscreensaver.h  imageprovider.cpp  imageprovider.h  main.cpp  org.deepin.screensaver.CustomConfig.service  org.deepin.screensaver.CustomConfig.xml  screensaversettingdialog.cpp  screensaversettingdialog.h  screensaverview.cpp  screensaverview.h  screensaverwindow.cpp  screensaverwindow.h  selectpathwidget.cpp  selectpathwidget.h  singleapplication.cpp  singleapplication.h  src.pro  timeintervalwidget.cpp  timeintervalwidget.h  truncatelineedit.cpp  truncatelineedit.h  update_translations.sh  utils.cpp  utils.h
src/configs/: org.deepin.screensaver.json
src/configs/dbus/: ScreenSaverAdaptor.cpp  ScreenSaverAdaptor.h
src/configs/json/: org_deepin_customscreensaver.hpp  org_deepin_screensaver.hpp
src/translations/: deepin-screensaver.ts  deepin-screensaver_ady.ts  deepin-screensaver_af.ts  deepin-screensaver_am_ET.ts  deepin-screensaver_ar.ts  deepin-screensaver_ast.ts  deepin-screensaver_az.ts  deepin-screensaver_bg.ts  deepin-screensaver_bn.ts  deepin-screensaver_bo.ts  deepin-screensaver_bqi.ts  deepin-screensaver_br.ts  deepin-screensaver_ca.ts  deepin-screensaver_cs.ts  deepin-screensaver_da.ts  deepin-screensaver_de.ts  deepin-screensaver_el.ts  deepin-screensaver_en_AU.ts  deepin-screensaver_en_GB.ts  deepin-screensaver_eo.ts  deepin-screensaver_es.ts  deepin-screensaver_es_CU.ts  deepin-screensaver_et.ts  deepin-screensaver_fa.ts  deepin-screensaver_fi.ts  deepin-screensaver_fil.ts  deepin-screensaver_fr.ts  deepin-screensaver_gl_ES.ts  deepin-screensaver_he.ts  deepin-screensaver_hi_IN.ts  deepin-screensaver_hr.ts  deepin-screensaver_hu.ts  deepin-screensaver_hy.ts  deepin-screensaver_id.ts  deepin-screensaver_it.ts  deepin-screensaver_ja.ts  deepin-screensaver_ka.ts  deepin-screensaver_kab.ts  deepin-screensaver_km_KH.ts  deepin-screensaver_kn_IN.ts  (+41 more)
tools/: CMakeLists.txt
tools/preview/: CMakeLists.txt  main.cpp  previewwindow.cpp  previewwindow.h
xscreensaver/: CMakeLists.txt  xscreensaver.pro
